--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     ]
   },
   "dependencies": {
+    "script-loader": "^0.7.2",
+    "@antv/g6": "3.0.5-beta.9",
+    "@antv/g6-plugins": "1.0.9",
     "axios": "^0.19.0",
     "codemirror": "^5.53.2",
     "core-js": "^3.23.3",
@@ -51,8 +54,7 @@
     "vuex": "^3.6.2",
     "sockjs-client": "^1.5.0",
     "stompjs": "^2.3.3",
-     "vue-stomp": "0.0.5",
-   
+    "vue-stomp": "0.0.5",
     "katex": "^0.16.4",
     "wangeditor": "^4.7.15"
   },
