xzs-studentcd  D:\proj\bishe\exam-vue-student

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xzs-student",
+  "name": "exam-vue-student",
   "version": "3.7.0",
   "author": "starp",
   "description": "考试系统",
@@ -17,10 +17,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitee.com/mindskip/xzs-mysql.git"
+    "url": "git+https://gitee.com/starplatinum111/exam-vue-student"
   },
   "bugs": {
-    "url": "https://gitee.com/mindskip/xzs-mysql/issues",
+    "url": "https://gitee.com/starplatinum111/exam-vue-student",
     "email": "mindskip@qq.com"
   },
   "husky": {
